# my_bot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  db.script  example_config.json  init.sh
.github/workflows/: cmake.yml
cmake/: FindDPP.cmake
include/tavernbot/: tavernbot.h
scripts/: db.script  init.sh  install_SQLiteCpp.sh  install_libs_deb.sh  install_libs_debian.sh  install_libs_redhat.sh  install_libs_rpm.sh
src/: ClusterSetter.cpp  ClusterSetter.h  DBAdapter.cpp  DBAdapter.h  DBCreator.h  MessageChecker.cpp  MessageChecker.h  main.cpp
